# automatic_math_grading

./: .gitignore  AGENTS.md  README.md
backend/: drawSQL-mysql-export-2026-05-23 (1).sql  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: __init__.py  assignmentModel.py  classroom.py  classroomModel.py  result.py  resultModel.py  rubric.py  rubric_evaluation.py  rubric_scorer.py  submissionModel.py  user.py  vlm.py
backend/app/routes/: assignmentRoute.py  auth.py  classroomRoute.py  ocr.py  predict.py  review.py  rubricRoute.py  submissions.py  submit.py
backend/app/schemas/: __init__.py  assignment.py  authSchema.py  classroom.py  classroomSchema.py  ocr.py  result.py  resultSchema.py  rubric.py  submission.py  submissionSchema.py  user.py  userSchema.py
backend/app/services/: assignmentService.py  assignment_service.py  classroomService.py  classroom_service.py  gradingOrchestrator.py  grading_orchestrator.py  grading_service.py  resultService.py  result_service.py  rubricService.py  rubric_service.py  submissionService.py  submission_service.py
backend/app/utils/: security.py
backend/data/: __init__.py
backend/data/storage/: __init__.py  base.py  local_storage.py
backend/migrations/: env.py
backend/migrations/versions/: 6635219cd166_initial.py
backend/src/: main.py
backend/src/core/: config.py  database.py
backend/src/services/: assignment.py  classroom.py  grading.py  image_quality.py  pipeline.py  result.py  rubric.py  submission.py
backend/tests/: conftest.py
(+77 files in other folders)
