[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[all]>=0.136.1",
    "google-genai>=2.7.0",
    "groq>=1.4.0",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "psycopg2-binary>=2.9.12",
    "pypdf>=5.0.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
